webAppTest/jaegerDeploymentPatch.yaml
apiVersion: jaegertracing.io/v1
kind: Deployment
metadata:
  name: demo-jaeger
spec:
  template:
    spec:
      containers:
        - name: demo-jaeger
